[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = ["Jeremy Riou <jeremy.riou@cntxt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
cognite-toolkit = "0.3.0b4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
